fixed buttons shifting

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -45,6 +45,10 @@ img, .image_description {
   height: 200px;
 }
 
+p {
+  margin: 0;
+}
+
 .image_description { 
 font-family: 'Waiting for the Sunrise', cursive;
 font-size: 150%;
